# LLMSLG

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.claude/: README.md  settings.json  settings.local.json.example
.claude/agents/: code-reviewer.md  docs-writer.md  explorer.md  plan-architect.md  security-auditor.md  test-runner.md
.claude/commands/: check.md  clean.md  onboard.md  open-pr.md  ship.md  start-task.md  tour.md
.claude/hooks/: README.md  post-edit-format.sh  pre-bash-deny-secrets.sh  pre-edit-worktree-guard.sh  session-end-log.sh  session-start-context.sh  stop-summary.sh  subagent-stop-log.sh  user-prompt-detect-dev.sh  user-prompt-router.sh  worktree-create.sh
.claude/hooks/lib/: log-event.sh
.claude/rules/: game-protocol-changes.md  python-style.md  secrets-handling.md  tests-discipline.md  ts-style.md  worktree-discipline.md
.claude/skills/audit-rpc/: SKILL.md
.claude/skills/bump-version/: SKILL.md
.claude/skills/debug-game-loop/: SKILL.md
.claude/skills/plan-feature/: SKILL.md
.claude/skills/python-quality/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/security-review/: SKILL.md
.claude/skills/ts-quality/: SKILL.md
.claude/skills/update-protocol/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/landing/: .env.example  CLAUDE.md  README.md  next.config.mjs  package.json  tsconfig.json  vercel.json  vitest.config.ts
apps/landing/app/: layout.tsx  page.tsx
apps/landing/app/components/: ChatPanel.tsx  ResourceDisplay.tsx
apps/landing/app/lib/: api.ts
apps/llmagent/: .env.example  CLAUDE.md  README.md  pyproject.toml
apps/llmagent/src/llmagent/: __init__.py  cli.py  config.py
apps/llmagent/src/llmagent/game/: __init__.py  client.py  tools.py
apps/llmagent/src/llmagent/llm/: __init__.py  client.py
apps/llmagent/tests/: conftest.py  test_chat.py  test_config.py  test_env.py  test_smoke.py
apps/llmagent/tests/eval/: __init__.py  conftest.py  test_scenarios.py
apps/server/: CLAUDE.md  README.md  pyproject.toml
apps/server/src/server/: __init__.py  app.py  cli.py
apps/server/src/server/persistence/: __init__.py  crud.py  database.py  models.py
apps/server/src/server/rpc/: __init__.py  resources.py
apps/server/src/server/state/: __init__.py  service.py
apps/server/src/server/telemetry/: __init__.py  logging.py
apps/server/tests/: conftest.py  test_smoke.py
docs/: README.md  agent-tools.md  api-reference.md  architecture.md  claude-code-guide.md  contributing.md  deployment.md  game-architecture.md  game-design-core-loop.md  onboarding.md  testing.md
docs/adr/: 0000-template.md  0001-monorepo-layout.md  0002-claude-harness.md  0003-auth-protocol.md  0003-production-architecture.md  0003-vercel-landing-deployment.md  0004-worktree-edit-guard.md  README.md
python-packages/shared/: CLAUDE.md  README.md  pyproject.toml
python-packages/shared/src/shared/: __init__.py
python-packages/shared/src/shared/models/: __init__.py  auth.py  user.py
python-packages/shared/tests/: test_auth_models.py  test_smoke.py
scripts/: README.md  bootstrap.sh  check.sh  clean.sh  dev-agent.sh  dev-server.sh  format.sh  lint-claude.sh  new-package.sh  new-skill.sh  test-hooks.sh
scripts/schemas/: README.md
tests/fixtures/hook-payloads/: README.md  post-tool-use-edit.json  pre-tool-use-bash.json  pre-tool-use-edit.json  session-end.json  session-start.json  stop.json  subagent-stop.json  user-prompt-expansion-ship.json  user-prompt-submit.json  worktree-create.json
tooling/: CLAUDE.md  README.md
tooling/eslint-config/: PLACEHOLDER.md
