[project]
name = "server"
version = "0.0.1"
description = "Authoritative game server for LLMSLG."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "LLMSLG Team" }]
license = { text = "TBD" }

dependencies = [
    "shared",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.35",
    "aiosqlite>=0.20.0",
    "structlog>=24.4.0",
]

[project.scripts]
server = "server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]

[tool.uv.sources]
shared = { workspace = true }
