[project]
name = "shared"
version = "0.0.1"
description = "Shared Pydantic models and protocol enums for LLMSLG."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "LLMSLG Team" }]
license = { text = "TBD" }

dependencies = [
    "pydantic>=2.13.4",
    "typing-extensions>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
